# fmri_participant_demographics

./: .gitignore  LICENSE  Makefile  README  requirements.txt  setup.cfg  setup.py
data/: all_annotated_pmcids_on_2023-08-24T20:52:29.829188.json  training_pmcids.json
participants_demographics/: setup.cfg  setup.py
participants_demographics/src/participants_demographics/: __init__.py  _information_extraction.py  _nqdc.py  _reading.py  _summarization.py
participants_demographics/src/participants_demographics/_data/: numbers_grammar.lark  participants_grammar.lark
participants_demographics/tests/: test_information_extraction.py
participants_demographics/tests/data/: example_doc.txt
scanning_horizon/: setup.cfg
scripts/: README.md  annotate.py  compare_n_participants.py  compare_n_participants_KENDRA_data.py  csv_to_parquet.py  evaluate_demographics_gpt.py  extract_demographics.py  extract_demographics_gpt.py  extract_demographics_gpt_all.py  extract_demographics_gpt_all_redo.py  extract_n_for_labelled_papers.py  extract_n_participants.py  extract_n_participants_all_docs.py  extract_participants_info.py  extract_participants_info_horizon.py  get_currently_annotated_pmcids.py  lineplot_n-over-time_diff-sources.py  n_participants_abstract_vs_body.py  n_participants_distribution.py  plot_ages.py  plot_gpt_n_participants_scatter.py  plot_n_participants.py  plot_n_participants_scatter.py  sample_size_report.py  scatterplot_truth-vs-gpt-and-heuristic.py  score_n_participants.py  score_n_participants_extractor.py  scratch.py  store_ground_truth.py  utils.py  (+1 more)
(+57 files in other folders)
