[metadata]
name = participants_demographics

[options]
packages = find:
package_dir =
    =src
install_requires =
    lark
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
nqdc.plugin_actions =
    get_nqdc_actions = participants_demographics._nqdc:get_nqdc_actions