[metadata]
name = participants_demographics

[options]
packages = find:
package_dir =
    =src
install_requires =
    lark
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
pubget.plugin_actions =
    get_pubget_actions = participants_demographics._pubget:get_pubget_actions